[REFACTOR] Remove unused FAQ Endpoint and refine configuration
src/main/java/com/study/api_gateway/config/CustomConfig.java: Removed unused `CustomConfig` class to clean up redundant central configurations.
src/main/java/com/study/api_gateway/controller/support/FaqController.java: Deleted obsolete `FaqController` to simplify support service endpoints.
docs/DOMAIN_DRIVEN_STRUCTURE.md: Added documentation for domain-driven package restructuring best practices.
docs/IMPROVEMENT_ROADMAP.md: Introduced a guided roadmap for API Gateway improvements.

참고: Ensure documentation changes are reviewed for accuracy.

Signed-off-by: ddingjoo <ddingsha9@teambind.co.kr>